# digkit

./: .gitignore  README.md  digkit.py  pyproject.toml  setup.py
Apple Warrant Return Scripts/: README.md  decrypt.bat  download.bat  download.md
Registry Hive Collector/: README.md  registry_collector.service  registry_collector.sh
SQL Queries/dwbCommon.db/: README.md  dwbCommon.sql
Secure Apple Notes/: extract_note_hashes.py
digkit/: cli.py  utils.py
digkit/data/: cccii.json  mccmnc.json
digkit/scripts/: apple_warrant.py  bundleid_lookup.py  iccid_lookup.py  sqlite_queries.py
iCloud Warrant Return Scripts/: decrypt.md
scripts/: domain_lookup.py  hash_algorithms.py  iccid_lookup.py
