[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digkit"
version = "2.0"
description = "A collection of digital forensics tools and scripts."
authors = [
    { name = "campwill" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "requests",
    "beautifulsoup4",
    "python-gnupg"
]

[project.urls]
Homepage = "https://github.com/campwill/digkit"
Source = "https://github.com/campwill/digkit"
Issues = "https://github.com/campwill/digkit/issues"

[project.scripts]
digkit = "digkit.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["digkit"]

[tool.setuptools.package-data]
digkit = ["data/*.json"]